--- a/index.html
+++ b/index.html
@@ -22,22 +22,46 @@
   </div>
   
   <div class="sitename">
+  <img class="img-logo" src="images/Logo.png" alt="logo">
   <h2>Aneesah Saeed</h2>
   </div>
   
   </nav>
   
   <body>
-  <section class="openingstatement">
-  <img src="images/IMG_1954 (2).JPG" alt="mainphoto" class="mainphoto"> 
-  <p>A UX Designer/Researcher who strives to make our world a better place through human centric design by forming intuitive solutions to solve complex problems.</p>
-  </section>
+  <div class="openingstatement">
+  <img class="mainphoto" src="images/Profile Pic.JPG" alt="mainphoto" > 
+  <p><strong>Hello</strong>, I am <strong>Aneesah Saeed</strong></p>
+  <p>A UX Designer/Researcher who <strong>strives</strong> to make <strong>our world a better place</strong> through <strong>human centric design</strong> by forming <strong>intuitive solutions</strong> to <strong>solve complex problems</strong>.</p>
+  <p>This is a space where I share my passion for design with you!</p>
+  </div>
   
-  <section>
-  <p2>Featured Projects</p2>
-  <img src="images/Screen Shot 2021-04-14 at 1.59.05 PM.png" alt="sections" class="sections">
-  </section>
-  </body>
+  <div class="projects">
+  <h3>Featured Projects</h3><hr>
+    <img class="img-desinator" src="images/Destinator.png" alt="destinator project">
+    <img class="img-hfh" src="images/HfH.png" alt="habitat for humanity project">
+    <img class="img-pal" src="images/Pal.png" alt="pal project">
+  </div>
+
+  <div class="tools">
+    <h3>Tools</h3><hr>
+      <img class="img-tools" src="images/Tools.png" alt="tools">
+    </div>
+
+    <div class="designprocess">
+      <h3>Design Process</h3><hr>
+        <img class="img-designprocess" src="images/Design Process.png" alt="designprocess">
+      </div>
+
+<div class="footer">
+    <p> Let's Collaborate and make a difference together!</p>
+    <p> Email me: aneesah.saeed57@gmail.com</p>
+    <p> Or Connect Via: 
+      <img class="img-linkedin" src="images/Linkedin.png" alt="likedin">
+      <img class="img-dribble" src="images/Dribble.png" alt="dribble"></p>
+      </div>
+
+    </body>
   
   </html>
   
